Fix lint and todo.

--- a/sample-java/src/main/res/layout/activity_main.xml
+++ b/sample-java/src/main/res/layout/activity_main.xml
@@ -25,8 +25,10 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="HardcodedText">
 
     <Button
         android:id="@+id/button_create_token"
@@ -38,7 +40,8 @@
         android:layout_marginLeft="8dp"
         android:text="generate token"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <EditText
         android:id="@+id/text_token_id"
