--- a/sample-kotlin/src/main/res/layout/activity_main.xml
+++ b/sample-kotlin/src/main/res/layout/activity_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~
   ~ Copyright (c) 2018 PAY, Inc.
   ~
@@ -22,83 +21,113 @@
   ~ SOFTWARE.
   -->
 
-<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp"
     tools:ignore="HardcodedText">
 
-    <Button
-        android:id="@+id/button_create_token"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/text_card_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="card number"
+        android:inputType="number"
+        android:text="4242424242424242"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/text_card_cvc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="card cvc"
+        android:inputType="number"
+        android:text="123"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/text_card_exp_month"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="card exp month"
+        android:inputType="number"
+        android:text="12"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/text_card_exp_year"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="card exp year"
+        android:inputType="number"
+        android:text="2020"
+        android:textSize="14sp" />
+
+    <EditText
+        android:id="@+id/text_card_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="card name"
+        android:inputType="text"
+        android:text="TARO YAMADA"
+        android:textSize="14sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:text="generate token"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button_create_token"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="generate token" />
+
+        <Button
+            android:id="@+id/button_get_token"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="get token by id" />
+
+    </LinearLayout>
 
     <EditText
         android:id="@+id/text_token_id"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:hint="token ID (after created available)"
-        android:textSize="14sp"
+        android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:clickable="false"
+        android:hint="token ID (after created available)"
+        android:inputType="text"
         android:longClickable="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_create_token" />
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/text_token_content"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="The token will be shown here."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_token_id"
-        app:layout_constraintVertical_bias="0" />
-
-    <Button
-        android:id="@+id/button_get_token"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="get token by token id"
-        app:layout_constraintBottom_toBottomOf="@+id/button_create_token"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toEndOf="@+id/button_create_token"
-        app:layout_constraintTop_toTopOf="@+id/button_create_token"
-        app:layout_constraintVertical_bias="0.0" />
+        android:text="The token will be shown here." />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        app:layout_constraintTop_toTopOf="@id/text_token_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
