--- a/sample-kotlin/src/main/res/layout/activity_main.xml
+++ b/sample-kotlin/src/main/res/layout/activity_main.xml
@@ -21,113 +21,120 @@
   ~ SOFTWARE.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:ignore="HardcodedText">
-
-    <EditText
-        android:id="@+id/text_card_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="card number"
-        android:inputType="number"
-        android:text="4242424242424242"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/text_card_cvc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="card cvc"
-        android:inputType="number"
-        android:text="123"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/text_card_exp_month"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="card exp month"
-        android:inputType="number"
-        android:text="12"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/text_card_exp_year"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="card exp year"
-        android:inputType="number"
-        android:text="2020"
-        android:textSize="14sp" />
-
-    <EditText
-        android:id="@+id/text_card_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="card name"
-        android:inputType="text"
-        android:text="TARO YAMADA"
-        android:textSize="14sp" />
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button_create_token"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="generate token" />
+            android:orientation="vertical"
+            android:padding="16dp"
+            tools:ignore="HardcodedText">
 
-        <Button
-            android:id="@+id/button_get_token"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="get token by id" />
+        <EditText
+                android:id="@+id/text_card_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="card number"
+                android:inputType="number"
+                android:text="4242424242424242"
+                android:textSize="14sp" />
+
+        <EditText
+                android:id="@+id/text_card_cvc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="card cvc"
+                android:inputType="number"
+                android:text="123"
+                android:textSize="14sp" />
+
+        <EditText
+                android:id="@+id/text_card_exp_month"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="card exp month"
+                android:inputType="number"
+                android:text="12"
+                android:textSize="14sp" />
+
+        <EditText
+                android:id="@+id/text_card_exp_year"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="card exp year"
+                android:inputType="number"
+                android:text="2020"
+                android:textSize="14sp" />
+
+        <EditText
+                android:id="@+id/text_card_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="card name"
+                android:inputType="text"
+                android:text="TARO YAMADA"
+                android:textSize="14sp" />
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+            <Button
+                    android:id="@+id/button_create_token"
+                    style="@style/Widget.AppCompat.Button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="generate token" />
+
+            <Button
+                    android:id="@+id/button_get_token"
+                    style="@style/Widget.AppCompat.Button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="get token by id" />
+
+        </LinearLayout>
+
+        <EditText
+                android:id="@+id/text_token_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:clickable="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="token ID (after created available)"
+                android:inputType="text"
+                android:longClickable="false"
+                android:textSize="14sp" />
+
+        <TextView
+                android:id="@+id/text_token_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:text="The token will be shown here." />
+
+        <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:visibility="gone" />
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/text_token_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:hint="token ID (after created available)"
-        android:inputType="text"
-        android:longClickable="false"
-        android:textSize="14sp" />
 
-    <TextView
-        android:id="@+id/text_token_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="The token will be shown here." />
-
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:visibility="gone" />
-
-</LinearLayout>
+</ScrollView>
