--- a/payjp/src/main/res/layout/card_form_view.xml
+++ b/payjp/src/main/res/layout/card_form_view.xml
@@ -67,7 +67,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_edit_expiration"
-                    android:layout_width="204dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:imeOptions="actionNext"
