Detect card brand from input.

--- a/payjp/src/main/res/layout/card_form_view.xml
+++ b/payjp/src/main/res/layout/card_form_view.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/payjp_card_form_number_label">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <jp.pay.android.ui.widget.CardNumberEditText
                 android:id="@+id/input_edit_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
