Add hint for credit card holder name autofill.

--- a/payjp/src/main/res/layout/card_form_view.xml
+++ b/payjp/src/main/res/layout/card_form_view.xml
@@ -119,8 +119,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapCharacters"
+                android:autofillHints="name"
                 android:maxLines="1"
-                tools:text="TARO YAMADA"/>
+                tools:text="TARO YAMADA"
+                tools:targetApi="o"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
