--- a/payjp/src/main/res/layout/card_form_view.xml
+++ b/payjp/src/main/res/layout/card_form_view.xml
@@ -22,14 +22,13 @@
   ~ SOFTWARE.
   -->
 
-<merge
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:parentTag="android.widget.LinearLayout">
+        android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_number"
@@ -126,4 +125,4 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-</merge>
+</LinearLayout>
