--- a/sample-kotlin/src/main/res/layout/activity_card_form_view_sample.xml
+++ b/sample-kotlin/src/main/res/layout/activity_card_form_view_sample.xml
@@ -24,8 +24,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"
-            xmlns:app="http://schemas.android.com/apk/res-auto">
+            android:layout_width="match_parent">
 
     <LinearLayout
             android:layout_width="match_parent"
@@ -34,11 +33,10 @@
             android:padding="16dp"
             tools:ignore="HardcodedText">
 
-        <jp.pay.android.ui.widget.CardFormView
+        <FrameLayout
                 android:id="@+id/card_form_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:holderNameInputEnabled="false"/>
+                android:layout_height="match_parent"/>
 
         <TextView
                 android:layout_width="wrap_content"
@@ -62,6 +60,7 @@
                     android:id="@+id/switch_card_holder_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:checked="true"
                     android:layout_gravity="end"/>
         </FrameLayout>
 
