Create input data inside of viewModel.

--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/payjp_card_form_number_label">
 
-        <jp.pay.android.ui.widget.CardNumberEditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_edit_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                 app:layout_constraintStart_toEndOf="@+id/input_layout_expiration"
                 app:layout_constraintHorizontal_bias="0.5">
 
-            <jp.pay.android.ui.widget.CardCvcEditText
+            <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/input_edit_cvc"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
-        <jp.pay.android.ui.widget.CardHolderNameEditText
+        <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/input_edit_holder_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
