Switch cvc ime action whether holder name enabled or not.

--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -120,6 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapCharacters"
+                android:imeOptions="actionDone"
                 android:autofillHints="name"
                 android:maxLines="1"
                 tools:text="TARO YAMADA"
