--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -47,6 +47,9 @@
                 android:maxLines="1"
                 android:autofillHints="creditCardNumber"
                 tools:text="1234 1234 1234 1234"
+                android:nextFocusForward="@id/input_edit_expiration"
+                android:nextFocusDown="@id/input_edit_expiration"
+                android:nextFocusRight="@id/input_edit_expiration"
                 tools:targetApi="o"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -75,6 +78,9 @@
                     android:maxLines="1"
                     android:inputType="date"
                     android:imeOptions="actionNext"
+                    android:nextFocusForward="@id/input_edit_cvc"
+                    android:nextFocusDown="@id/input_edit_cvc"
+                    android:nextFocusRight="@id/input_edit_cvc"
                     tools:text="12/20"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -99,6 +105,9 @@
                     android:maxLines="1"
                     android:inputType="numberPassword"
                     android:autofillHints="creditCardSecurityCode"
+                    android:nextFocusForward="@id/input_edit_holder_name"
+                    android:nextFocusDown="@id/input_edit_holder_name"
+                    android:nextFocusRight="@id/input_edit_holder_name"
                     tools:text="123"
                     tools:targetApi="o"/>
 
