--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -48,8 +48,6 @@
                 android:autofillHints="creditCardNumber"
                 tools:text="1234 1234 1234 1234"
                 android:nextFocusForward="@id/input_edit_expiration"
-                android:nextFocusDown="@id/input_edit_expiration"
-                android:nextFocusRight="@id/input_edit_expiration"
                 tools:targetApi="o"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -79,8 +77,6 @@
                     android:inputType="date"
                     android:imeOptions="actionNext"
                     android:nextFocusForward="@id/input_edit_cvc"
-                    android:nextFocusDown="@id/input_edit_cvc"
-                    android:nextFocusRight="@id/input_edit_cvc"
                     tools:text="12/20"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -106,8 +102,7 @@
                     android:inputType="numberPassword"
                     android:autofillHints="creditCardSecurityCode"
                     android:nextFocusForward="@id/input_edit_holder_name"
-                    android:nextFocusDown="@id/input_edit_holder_name"
-                    android:nextFocusRight="@id/input_edit_holder_name"
+                    android:imeOptions="actionNext"
                     tools:text="123"
                     tools:targetApi="o"/>
 
