--- a/sample/src/main/res/layout/activity_card_form_view_sample.xml
+++ b/sample/src/main/res/layout/activity_card_form_view_sample.xml
@@ -38,16 +38,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/TextAppearance.AppCompat.Headline"
-                android:layout_marginTop="20dp"
-                android:text="サンプル"/>
-
         <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:padding="8dp">
 
             <TextView
@@ -64,43 +58,32 @@
                     android:layout_gravity="end"/>
         </FrameLayout>
 
-        <LinearLayout
+        <Button
+                android:id="@+id/button_create_token"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-            <Button
-                    android:id="@+id/button_create_token"
-                    style="@style/Widget.AppCompat.Button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="create token" />
-
-            <Button
-                    android:id="@+id/button_get_token"
-                    style="@style/Widget.AppCompat.Button"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="get token by id" />
-
-        </LinearLayout>
+                android:text="create token" />
 
         <Button
                 android:id="@+id/button_create_token_with_validate"
-                style="@style/Widget.AppCompat.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginTop="16dp"
                 android:text="validate form and create token" />
+
+        <Button
+                android:id="@+id/button_get_token"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:text="get token by id" />
 
         <EditText
                 android:id="@+id/text_token_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="20dp"
                 android:clickable="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
