--- a/sample/src/main/res/values/styles.xml
+++ b/sample/src/main/res/values/styles.xml
@@ -24,11 +24,43 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="Material" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">@color/primaryColor</item>
+        <item name="colorPrimaryDark">@color/primaryDarkColor</item>
+        <item name="colorAccent">@color/secondaryColor</item>
+        <item name="android:textColorPrimary">@color/primaryTextColor</item>
+        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
+    </style>
+
+    <style name="Material.Outline">
+        <item name="textInputStyle">@style/MaterialTextFieldOutline</item>
+    </style>
+
+    <style name="Material.Filled">
+        <item name="textInputStyle">@style/MaterialTextFieldFilled</item>
+    </style>
+
+    <style name="Material.FilledDense">
+        <item name="textInputStyle">@style/MaterialTextFieldFilledDense</item>
+    </style>
+
+    <style name="MaterialTextFieldOutline" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <!-- customize -->
+    </style>
+
+    <style name="MaterialTextFieldFilled" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <!-- customize -->
+    </style>
+
+    <style name="MaterialTextFieldFilledDense" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
+        <!-- customize -->
     </style>
 
 </resources>
